--- a/meeting_page1.htm
+++ b/meeting_page1.htm
@@ -52,42 +52,42 @@
                   <table>
                     <thead>
                       <tr>
-                        <th>時段</th>
-                        <th>會議室</th>
-                        <th>會議主題</th>
-                        <th>會議時間</th>
+                        <th class="thtime">時段</th>
+                        <th class="place">會議室</th>
+                        <th class="theme">會議主題</th>
+                        <th class="time">會議時間</th>
                       </tr>
                     </thead>
                     <tbody>
                       <tr>
-                        <th class="time lefttime" rowspan="2">上午</th>
-                        <td class="aCenter nowrap">第一會議室(6F)</td>
-                        <td><a href="meeting_page2.htm">司法院「司法e化推動委員會」第15次會議</a></td>
+                        <th class="thtime" rowspan="2">上午</th>
+                        <td class="aCenter place"><span>第一會議室(6F)第一會議室(6F)第一會議室(6F)第一會議室(6F)</span></td>
+                        <td class="theme">司法院「司法e化推動委員會」第15次會議</td>
                         <td class="time nowrap">09:30 - 12:00</td>
                       </tr>
                       <tr>
-                        <!-- <th class="time">上午</th> -->
-                        <td class="aCenter nowrap">第二會議室(6F)</td>
-                        <td><a href="#">A組會議</a></td>
+                        <!-- <th class="thtime">上午</th> -->
+                        <td class="aCenter place"><span>第二會議室(6F)</span></td>
+                        <td class="theme">A組會議</td>
                         <td class="time nowrap">10:00 - 12:00</td>
                       </tr>
 
                       <tr>
-                        <th class="time lefttime" rowspan="3">下午</th>
-                        <td class="aCenter nowrap">多媒體簡報室(1F)</td>
-                        <td><a href="#">英文讀書會</a></td>
+                        <th class="thtime" rowspan="3">下午</th>
+                        <td class="aCenter place"><span>多媒體簡報室(1F)</span></td>
+                        <td class="theme">英文讀書會</td>
                         <td class="time nowrap">13:00 - 14:00</td>
                       </tr>
                       <tr>
-                        <!-- <th class="time">下午</th> -->
-                        <td class="aCenter nowrap">第二會議室(6F)</td>
-                        <td><a href="#">英文讀書會英文讀書會英文讀書會英文讀書會英文讀書會英文讀書會30個字以後</a></td>
+                        <!-- <th class="thtime">下午</th> -->
+                        <td class="aCenter place"><span>第二會議室(6F)</span></td>
+                        <td class="theme">英文讀書會英文讀書會英文讀書會英文讀書會英文讀書會英文讀書會30個字以後</td>
                         <td class="time nowrap">14:00 - 15:00</td>
                       </tr>
                       <tr>
-                        <!-- <th class="time">下午</th> -->
-                        <td class="aCenter nowrap">第二會議室(6F)</td>
-                        <td><a href="#">會議主題會議主題會議主題最多輸入30個字會議主題最多輸入30個字</a></td>
+                        <!-- <th class="thtime">下午</th> -->
+                        <td class="aCenter place">第二會議室(6F)</td>
+                        <td class="theme">會議主題會議主題會議主題最多輸入30個字會議主題最多輸入30個字></td>
                         <td class="time nowrap">14:00 - 15:00</td>
                       </tr>
 
@@ -101,36 +101,36 @@
                   <table>
                     <thead>
                       <tr>
-                        <th>時段</th>
-                        <th>會議室</th>
-                        <th>會議主題</th>
-                        <th>會議時間</th>
+                        <th class="thtime">時段</th>
+                        <th class="place">會議室</th>
+                        <th class="theme">會議主題</th>
+                        <th class="time">會議時間</th>
                       </tr>
                     </thead>
                     <tbody>
 
                       <tr>
-                        <th class="time lefttime" rowspan="4">下午</th>
-                        <td class="aCenter nowrap">多媒體簡報室(1F)</td>
-                        <td><a href="#">英文讀書會</a></td>
+                        <th class="thtime" rowspan="4">下午</th>
+                        <td class="aCenter place"><span>多媒體簡報室(1F)</span></td>
+                        <td class="theme">英文讀書會</td>
                         <td class="time nowrap">13:00 - 14:00</td>
                       </tr>
                       <tr>
-                        <!-- <th class="time">下午</th> -->
-                        <td class="aCenter nowrap">第二會議室(6F)</td>
-                        <td><a href="#">英文讀書會英文讀書會英文讀書會英文讀書會英文讀書會英文讀書會30個字以後</a></td>
+                        <!-- <th class="thtime">下午</th> -->
+                        <td class="aCenter place"><span>第二會議室(6F)</span></td>
+                        <td class="theme">英文讀書會英文讀書會英文讀書會英文讀書會英文讀書會英文讀書會30個字以後></td>
                         <td class="time nowrap">14:00 - 15:00</td>
                       </tr>
                       <tr>
-                        <!-- <th class="time">下午</th> -->
-                        <td class="aCenter nowrap">第二會議室(6F)</td>
-                        <td><a href="#">會議主題會議主題會議主題最多輸入30個字會議主題最多輸入30個字</a></td>
+                        <!-- <th class="thtime">下午</th> -->
+                        <td class="aCenter place"><span>第二會議室(6F)</span></td>
+                        <td class="theme">會議主題會議主題會議主題最多輸入30個字會議主題最多輸入30個字</td>
                         <td class="time nowrap">14:00 - 15:00</td>
                       </tr>
                       <tr>
-                        <!-- <th class="time">下午</th> -->
-                        <td class="aCenter nowrap">第二會議室(6F)</td>
-                        <td><a href="#">會議主題會議主題會議主題最多輸入30個字會議主題最多輸入30個字</a></td>
+                        <!-- <th class="thtime">下午</th> -->
+                        <td class="aCenter place"><span>第二會議室(6F)</span></td>
+                        <td class="theme">會議主題會議主題會議主題最多輸入30個字會議主題最多輸入30個字</td>
                         <td class="time nowrap">14:00 - 15:00</td>
                       </tr>
                     </tbody>
