--- a/meeting_page2.htm
+++ b/meeting_page2.htm
@@ -46,10 +46,10 @@
         <div class="container">
           <div class="col">
             <div class="single_meeting">
-              <div class="place">第一會議室(6F)</div>
-              <div class="title">司法院「司法e化推動委員會」第15次會議</div>
+              <div class="place">第一會議室(6F)第一會議室(6F)第一會議室(6F)</div>
+              <div class="title">司法院「司法e化推動委員會」第15次會議司法院「司法e化推動委員會」第15次會議司法院</div>
               <div class="time">112年9月30日<span>09:30 - 12:00</span></div>
-              <div class="organizer">主辦單位：資訊處</div>
+              <div class="organizer">主辦單位：資訊處主辦單位：資訊處主辦單位：資訊處主辦單位：資訊處</div>
             </div>
           </div>
         </div>
